--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("../../assets/fonts/Poppins-Medium.ttf");
+}
+
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -8,6 +14,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --main-font:"Poppins"
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
