--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,12 @@
-.main {
+/* .main {
   display: flex;
   width: 100%;
   height: auto;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* padding: 6rem; */
+  /* padding: 6rem; 
   background-color: black;
   color: #ffc94a;
 }
-
+ */
